--- a/descricao.html
+++ b/descricao.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./mi-assets/imagens/pngaaa.com-96154.png" type="image/x-icon">
+    <link rel="stylesheet" href="./mi-assets/css/global.css">
+    <link rel="stylesheet" href="./mi-assets/css/pokedex.css">
     <title>Descrição</title>
 </head>
-<body>
+<body >
     <!-- Descrição do pokemon selecionado -->
-    <script src="./assets/js/main.js"></script>
+    <h1>Pokemon</h1>
+
+    <div id="pokemondetalhe" class="pokemon"></div>
+
+    <script src="./mi-assets/js/pokemon-model.js"></script>
+    <script src="./mi-assets/js/poke-api.js"></script>
+    <script src="./mi-assets/js/main.js"></script>
+    
 </body>
 </html>
